--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ Temporary Items
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/go,macos,visualstudiocode
+.idea/*
